Bug 1319908 - Load the menu icons for the bookmarks menu with the correct content type and principal on OSX; r=baku

This patch makes nsMenuItemIconX also participate in the setup
introduced in bug 1277803.